re PR fortran/24549 ([4.1 only] ICE with invalid pseudo-declaration statement)

PR fortran/24549
	* parse.c (reject_statement): Clear gfc_new_block.
	* gfortran.dg/error_recovery_1.f90: New test.

From-SVN: r113671